<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llXxpl"
            style="@style/style_zc">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="安全保障"
                android:textColor="@color/color_homepage_quanbu"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_w_jt" />
        </LinearLayout>

        <View style="@style/style_setting_line" />

        <LinearLayout
            android:id="@+id/llBzzx"
            style="@style/style_zc">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="帮助中心"
                android:textColor="@color/color_homepage_quanbu"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_w_jt" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llKfrx"
            style="@style/style_zc">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="客服热线"
                android:textColor="@color/color_homepage_quanbu"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:gravity="center_vertical"
                android:text="@string/str_kfrx"
                android:textColor="@color/color_login_btn"
                android:textSize="14sp" />
        </LinearLayout>

        <View style="@style/style_setting_line" />

        <LinearLayout
            android:id="@+id/llGfwz"
            style="@style/style_zc">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="官方网站"
                android:textColor="@color/color_homepage_quanbu"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvGfwz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:gravity="center_vertical"
                android:text="@string/str_gfwz"
                android:textColor="@color/color_login_btn"
                android:textSize="14sp" />
        </LinearLayout>

        <View style="@style/style_setting_line" />

        <LinearLayout
            android:id="@+id/llGfqq"
            style="@style/style_zc">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="客服Q群"
                android:textColor="@color/color_homepage_quanbu"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvGfqq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:gravity="center_vertical"
                android:text="@string/str_gfqq"
                android:textColor="@color/color_login_btn"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llYjfk"
        style="@style/style_zc"
        android:layout_marginTop="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="我要吐槽"
            android:textColor="@color/color_homepage_quanbu"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_w_jt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llSbxx"
            style="@style/style_zc">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="设备信息"
                android:textColor="@color/color_homepage_quanbu"
                android:textSize="14sp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_w_jt" />
        </LinearLayout>

        <View style="@style/style_setting_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/color_hot_sale_gray"
                android:text="版权所有：" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_hot_sale_gray"
                android:text="@string/str_bqsy" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:textColor="@color/color_hot_sale_gray"
                android:text="地址：" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_hot_sale_gray"
                android:text="@string/str_address" />
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>